--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name":    "outlet",
+  "name": "outlet",
   "version": "0.0.1",
   "dependencies": {
     "async": "0.1.x",
@@ -7,7 +7,8 @@
     "cors": "0.0.4",
     "express": "3.1.x",
     "mongoose": "3.6.x",
-    "request": "2.16.x"
+    "request": "2.16.x",
+    "only": "0.0.2"
   },
   "devDependencies": {
     "nodemon": "0.7.x",
@@ -19,6 +20,6 @@
   },
   "engines": {
     "node": "0.8.x",
-    "npm":  "1.2.x"
+    "npm": "1.2.x"
   }
 }
