--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "cors": "0.0.4",
     "express": "3.1.x",
     "mongoose": "3.6.x",
-    "request": "2.16.x",
-    "only": "0.0.2"
+    "request": "2.16.x"
   },
   "devDependencies": {
     "nodemon": "0.7.x",
