--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "test": "foreman run node_modules/.bin/mocha ./test/*test.coffee"
   },
   "engines": {
-    "node": "0.8.x",
-    "npm": "1.2.x"
+    "node": "0.10.x"
   }
 }
