--- a/package.json
+++ b/package.json
@@ -18,6 +18,6 @@
     "test": "foreman run node_modules/.bin/mocha ./test/*test.coffee"
   },
   "engines": {
-    "node": "0.11.x"
+    "node": "0.11.7"
   }
 }
