--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "cors": "0.0.4",
     "express": "3.1.x",
     "mongoose": "3.6.x",
-    "request": "2.16.x",
-    "this-is-not-a-real-module": "*"
+    "request": "2.16.x"
   },
   "devDependencies": {
     "nodemon": "0.7.x",
