remove preinstall script

--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "mocha": "1.8.x"
   },
   "scripts": {
-    "test": "foreman run node_modules/.bin/mocha ./test/*test.coffee",
-    "preinstall": "echo hello I am the preinstall script"
+    "test": "foreman run node_modules/.bin/mocha ./test/*test.coffee"
   },
   "engines": {
     "node": "0.10.x"
