simplify test script command

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "mocha": "1.8.x"
   },
   "scripts": {
-    "test": "foreman run node_modules/.bin/mocha ./test/*test.coffee"
+    "test": "foreman run mocha ./test/*test.coffee"
   },
   "engines": {
     "node": "0.10.x"
